// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpoints should add a breakpoint 1`] = `
Array [
  Object {
    "breakpoints": Array [
      Object {
        "disabled": false,
        "generatedLocation": Object {
          "column": 1,
          "line": 2,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "id": "a:2:1",
        "location": Object {
          "column": 1,
          "line": 2,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "options": Object {},
        "originalText": "return a",
        "text": "return a",
        "thread": "FakeThread",
      },
    ],
    "filename": "a",
    "source": Object {
      "displayURL": Object {
        "filename": "a",
        "group": "localhost:8000",
        "path": "/examples/a",
        "search": "",
      },
      "extensionName": null,
      "id": "a",
      "isBlackBoxed": false,
      "isExtension": false,
      "isHTML": false,
      "isOriginal": false,
      "isPrettyPrinted": false,
      "isWasm": false,
      "relativeUrl": "/examples/a",
      "thread": "FakeThread",
      "url": "http://localhost:8000/examples/a",
    },
  },
]
`;

exports[`breakpoints should not show a breakpoint that does not have text 1`] = `Array []`;

exports[`breakpoints should remap breakpoints on pretty print 1`] = `
Object {
  "disabled": false,
  "generatedLocation": Object {
    "column": 0,
    "line": 1,
    "sourceId": "a.js",
    "sourceUrl": "http://localhost:8000/examples/a.js",
  },
  "id": "a.js/originalSource-d6d70368d5c252598541e693a7ad6c27:1:",
  "location": Object {
    "column": 0,
    "line": 1,
    "sourceId": "a.js/originalSource-d6d70368d5c252598541e693a7ad6c27",
    "sourceUrl": "http://localhost:8000/examples/a.js:formatted",
  },
  "options": Object {},
  "originalText": "function a() {",
  "text": "function a() {",
  "thread": "FakeThread",
}
`;

exports[`breakpoints should show a disabled breakpoint that does not have text 1`] = `
Array [
  Object {
    "breakpoints": Array [
      Object {
        "disabled": true,
        "generatedLocation": Object {
          "column": 1,
          "line": 5,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "id": "a:5:1",
        "location": Object {
          "column": 1,
          "line": 5,
          "sourceId": "a",
          "sourceUrl": "http://localhost:8000/examples/a",
        },
        "options": Object {},
        "originalText": "",
        "text": "",
        "thread": "FakeThread",
      },
    ],
    "filename": "a",
    "source": Object {
      "displayURL": Object {
        "filename": "a",
        "group": "localhost:8000",
        "path": "/examples/a",
        "search": "",
      },
      "extensionName": null,
      "id": "a",
      "isBlackBoxed": false,
      "isExtension": false,
      "isHTML": false,
      "isOriginal": false,
      "isPrettyPrinted": false,
      "isWasm": false,
      "relativeUrl": "/examples/a",
      "thread": "FakeThread",
      "url": "http://localhost:8000/examples/a",
    },
  },
]
`;
